feat<product>: create/delete/edit and view/pagination products
